Add simple test for Vector4fa.add()