@@ -332,6 +332,27 @@
 						</dependencies>
 					</plugin>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${maven-surefire-plugin.version}</version>
+						<configuration>
+							<forkCount>1</forkCount>
+							<argLine>--add-modules jdk.incubator.vector</argLine>
+						</configuration>
+						<executions>
+							<execution>
+								<id>forceunsafe</id>
+								<goals>
+									<goal>test</goal>
+								</goals>
+								<configuration>
+									<forkCount>1</forkCount>
+									<argLine>-Djoml.forceUnsafe --add-modules jdk.incubator.vector</argLine>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>${maven-javadoc-plugin.version}</version>
 						<configuration>
